// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditOrcid > renders disabled > EditOrcid - disabled 1`] = `
<div>
  <div
    class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
  >
    <div
      class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
    >
      <div
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        contributorOrcid.label
         
      </div>
      <div
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
        >
          0000-0002-1234-5678
        </p>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditOrcid > renders snapshot > EditOrcid 1`] = `
<div>
  <div
    class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
  >
    <div
      class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
    >
      <div
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        contributorOrcid.label
         
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary mr-2 w-full justify-between p-0 css-zmd0ac-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="flex gap-1 flex-row"
          >
            <span>
              actions.add
            </span>
            <span>
              contributorOrcid.label
            </span>
          </span>
          <span
            class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium opacity-0 group-hover:opacity-100 css-1umw9bq-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditOrcid > renders with orcidId > EditOrcid - with value 1`] = `
<div>
  <div
    class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
  >
    <div
      class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
    >
      <div
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        contributorOrcid.label
         
      </div>
      <div
        class="flex justify-between"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
        >
          0000-0002-1234-5678
        </p>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
